--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   </head>
   <body>
     <form>
-        <label>Name: <input type="text" name="name"></label>
-        <label>Reps: <input type="number" name="reps"></label>
-        <label>Sets: <input type="number" name="numCheckboxes"></label>
+        <label>Name: <input type="text" name="name"></label><br>
+        <label>Reps: <input type="number" name="reps"></label><br>
+        <label>Sets: <input type="number" name="numCheckboxes"></label><br>
         <input type="submit" value="Submit">
     </form>
-    <script src="js/form_gen.js"></script>
+    
     <div id="output"></div>
-    <button id="archive-button">Archive</button>
+    <button id="archive-button" >Archive</button>
+
+    <script src="js/form_gen.js"></script>
   </body>
 </html>
